--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/customercrud_app?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username = root
-spring.datasource.password =
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-
-spring.jpa.hibernate.ddl-auto = update
+#spring.datasource.url = jdbc:mysql://localhost:3306/customercrud_app?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.username = root
+#spring.datasource.password =
+#
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#
+#spring.jpa.hibernate.ddl-auto = update
